# claimwise

./: README.md  problem.md
frontend/: .env  package.json  pnpm-lock.yaml
python-backend/claimwise/: .gitignore  main.py  pyproject.toml
python-backend/claimwise/migrations/: env.py
python-backend/claimwise/migrations/versions/: 213281f5edc0_claim_table_created.py  2e6c0b460bfc_attachment_table_updated.py  317ac74de390_attachment_table_created.py  3c598788c96c_assessment_table_updated.py  4a73beb2c8b8_attachment_table_updated.py  4b733e160ce1_assessment_table_updated.py  8b718e603e2a_attachment_table_updated.py  921c0bda0401_attachment_table_updated.py  a424153d36d0_foreign_keys_removed_table_updated.py  ba5569214b6d_users_table_removed.py  bd96feffae8f_assessment_result_table_added.py  de1d9b278978_title_added_in_claim.py  fa76e2077291_user_table_updated.py  ff3899bad7c2_initial_migration.py
python-backend/claimwise/src/claimwise/config/: settings.py
python-backend/claimwise/src/claimwise/db/: session.py
python-backend/claimwise/src/claimwise/features/claims/repository/: assessment_result.py  attachment.py  claim.py
python-backend/claimwise/src/claimwise/features/claims/route/: claim.py
python-backend/claimwise/src/claimwise/features/claims/schema/: claim.py
python-backend/claimwise/src/claimwise/models/: __init__.py  assessment_result.py  attachments.py  claim.py  user.py
python-backend/claimwise/src/claimwise/utils/: enum.py  exceptions.py  logger.py  s3.py  timestamp_mixin.py
python-backend/claimwise/src/claimwise/utils/assessment_panel/: agent.py
(+133 files in other folders)
