[project]
name = "claimwise"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikita Bachute Coditas",email = "nikita.bachute@coditas.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.139.0,<0.140.0)",
    "uvicorn (>=0.51.0,<0.52.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "cryptography (>=49.0.0,<50.0.0)",
    "psycopg2 (>=2.9.12,<3.0.0)",
    "boto3 (>=1.43.46,<2.0.0)",
    "redis (>=8.0.1,<9.0.0)",
    "pypdf (>=6.14.2,<7.0.0)",
    "transformers (>=5.13.1,<6.0.0)",
    "sentence-transformers (>=5.6.0,<6.0.0)",
    "pyvector (>=0.1.3,<0.2.0)",
    "pgvector (>=0.5.0,<0.6.0)",
    "groq (>=1.5.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "claimwise", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
